# cppWorkSpace

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  checks.json  clang_check_list.txt  main.cpp  setup_project_structure.sh
.cache/clangd/index/: Car_interface.h.5A7EBC8EB3F73996.idx  Maruti.cpp.6A286F331A8C86E7.idx  Maruti.h.3B4DD789E1B0E254.idx  Tata.cpp.89DACB2B63D8F2A3.idx  Tata.h.073DCDBC81EF2D7C.idx  TestFile.cpp.54C703F2D869F7C5.idx  TestFile.h.CCE0F4C27D5E4281.idx  TestModule1.cpp.AFD257FF096B6CB4.idx  TestModule2.cpp.D913159F6180996C.idx  main.cpp.470BB118786DED63.idx  main.cpp.A62CF17C7E07293F.idx  main.cpp.D8C6935BB39BB505.idx  memory_issues.cpp.A4DD0D60EF57DE02.idx  memory_issues.hpp.A570CF25A09329A4.idx  thread_issues.cpp.C625CA2BDE79BF86.idx  thread_issues.hpp.53A305A8198358CE.idx  tlpi_hrd.h.CCAEFB1F65A72FE7.idx
cmake/: ClangTidy.cmake  CompilerOptions.cmake  FindGit.cmake  InstallRules.cmake  Sanitizers.cmake  Testing.cmake  config.cmake.in  version.hpp.in
docs/: chatgpt_setup.md
include/: memory_issues.hpp  thread_issues.hpp
scripts/: build.sh  check_commit.sh  run_tests.sh  run_valgrind.sh  setup_project_structure.sh
src/: main.cpp  memory_issues.cpp  thread_issues.cpp
tests/: CMakeLists.txt  memory_issues_ut.cpp  thread_issues_ut.cpp
